Pushing test for overflow fix # 1

--- a/src/assets/styles/Pages/Game/Game.css
+++ b/src/assets/styles/Pages/Game/Game.css
@@ -8,7 +8,6 @@
     padding-bottom: 10.5rem;
     height: 100vh;
     overflow-y: scroll;
-    
 }
 .game-container::-webkit-scrollbar{
     display: none;
@@ -296,7 +295,6 @@
         padding-top: 2rem;
         overflow-y: scroll;
         height: 100%;
-        
     }
     .game-team1-picks{
         display: flex;
@@ -372,8 +370,7 @@
     }
     .game-container{
         padding-top: 5rem;
-        padding: 5rem 2rem 0 3rem;
-        margin-bottom: 7rem;
+        padding: 5rem 2rem 0 3rem
     }
     .game-team1-container{
         align-items: center;
